Enlarged line height to avoid highlights overlapping.

--- a/src/components/Bubble/styles.module.css
+++ b/src/components/Bubble/styles.module.css
@@ -18,7 +18,6 @@
     display: inline-block;
     width: auto;
     max-width: 85%;
-    line-height: 1.3;
     padding: 5px;
     border-radius: 10px;
     font-family: -apple-system,Nunito,BlinkMacSystemFont,Segoe UI,Roboto,sans-serif;
